--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,25 +2,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/home"
+        android:id="@+id/map"
+        android:icon="@drawable/ic_location_on_black_24dp"
+        android:title="@string/map"
         />
 
     <item
-        android:id="@+id/map"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/map"
+        android:id="@+id/notifications"
+        android:icon="@drawable/ic_notifications_none_black_24dp"
+        android:title="@string/notifications"
         />
+
     <item
-        android:id="@+id/list"
+        android:id="@+id/voice"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/list"
+        android:title="@string/voice"
         />
+
+
     <item
-        android:id="@+id/status"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/status"
+        android:id="@+id/profile"
+        android:icon="@drawable/ic_person_outline_black_24dp"
+        android:title="@string/profile"
+        />
+
+    <item
+        android:id="@+id/othermenu"
+        android:icon="@drawable/ic_menu_black_24dp"
+        android:title="@string/othermenu"
         />
 
 </menu>
