--- a/app/src/main/res/layout/activity_sidewalk_report.xml
+++ b/app/src/main/res/layout/activity_sidewalk_report.xml
@@ -7,6 +7,7 @@
     tools:context="com.getcivix.app.SidewalkReport">
 
 
+
     <LinearLayout
         android:id="@+id/bottomBar"
         android:layout_width="match_parent"
@@ -53,5 +54,14 @@
             android:background="@drawable/ic_check_circle_grey_24dp"/>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/mybutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="218dp"
+        android:text="Click To Open Overlay" />
 
 </RelativeLayout>
