--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,26 +2,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/map"
+        android:id="@+id/mapmenu"
         android:icon="@drawable/ic_location_on_black_24dp"
         android:title="@string/map"
         />
 
     <item
-        android:id="@+id/notifications"
+        android:id="@+id/notificationmenu"
         android:icon="@drawable/ic_notifications_none_black_24dp"
         android:title="@string/notifications"
         />
 
     <item
-        android:id="@+id/voice"
+        android:id="@+id/voicemenu"
         android:icon="@drawable/ic_mic_none_black_24dp"
         android:title="@string/voice"
         />
 
 
     <item
-        android:id="@+id/profile"
+        android:id="@+id/profilemenu"
         android:icon="@drawable/ic_person_outline_black_24dp"
         android:title="@string/profile"
         />
