--- a/app/src/main/res/layout/activity_map_page.xml
+++ b/app/src/main/res/layout/activity_map_page.xml
@@ -47,7 +47,7 @@
         android:background="@drawable/white_border"
         android:id="@+id/relLayout1">
         
-        <ImageView
+      <!--  <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:id="@+id/ic_magnify"
@@ -55,17 +55,19 @@
             android:layout_marginLeft="10dp"
             android:src="@drawable/other"/>
 
+            <!-            android:layout_toRightOf="@+id/ic_magnify"-->
+-->
         <AutoCompleteTextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@+id/ic_magnify"
+
             android:layout_centerVertical="true"
             android:textSize="15sp"
             android:textColor="#000"
             android:id="@+id/input_search"
             android:background="@null"
             android:inputType="text"
-            android:hint="Enter Address"
+            android:hint=" Enter Address"
             android:imeOptions="actionSearch"
             android:singleLine="true"
             android:maxLines="1"
