--- a/app/src/main/res/layout/activity_map_page.xml
+++ b/app/src/main/res/layout/activity_map_page.xml
@@ -88,10 +88,18 @@
         android:id="@+id/ic_gps"
         android:src="@drawable/ic_gps"/>
 
-
-
-
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="83dp"
+        android:layout_marginRight="83dp"
+        android:layout_marginBottom="91dp"
+        android:clickable="true"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
 
 </RelativeLayout>
