This version has the floating button added to the map page, which opens a dialog box.

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -40,7 +40,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="130dp"
         android:background="@color/civixGreen"
-        android:textColor="@color/beige"
+        android:textColor="@color/white"
         android:text="@string/login"
         android:textStyle="bold"
         />
@@ -53,7 +53,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="61dp"
         android:background="@color/civixGreen"
-        android:textColor="@color/beige"
+        android:textColor="@color/white"
         android:text="@string/register"
         android:textStyle="bold"
         />
