--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,9 +17,10 @@
     <TextView
         android:layout_width="200dp"
         android:layout_height="100dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginTop="300dp"
+        android:text="THIS IS THE MAP FRAGMENT"
         android:textColor="@color/black"
-        android:text="THIS IS THE MAP FRAGMENT" />
+        app:fontFamily="@font/chelsea_market" />
 
 </FrameLayout>
