This version has the floating button added to the map page, which opens a dialog box.

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -54,8 +54,7 @@
         android:layout_marginBottom="61dp"
         android:background="@color/civixGreen"
         android:textColor="@color/white"
-        android:text="@string/register"
-        android:textStyle="bold"
+        android:text="@string/register"        android:textStyle="bold"
         />
 
 
