--- a/app/src/main/res/layout/fragment_road.xml
+++ b/app/src/main/res/layout/fragment_road.xml
@@ -1,14 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    style="@style/RootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Models.RoadFragment">
+    android:layout_centerHorizontal="true"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="147dp"
-        android:layout_height="32dp"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/txtTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:text="Send A Report"
+        android:textAllCaps="false"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
+
+
+    <Button
+        android:id="@+id/buttonCancel"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@android:color/transparent"
+        android:text="Cancel"
+        android:textColor="@color/common_google_signin_btn_text_dark_default"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:typeface="sans" />
+
+    <Button
+        android:id="@+id/buttonRoad"
+        android:layout_width="115dp"
+        android:layout_height="102dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="85dp"
+        android:layout_marginEnd="-13dp"
+        android:layout_toStartOf="@+id/txtTitle"
+        android:background="@drawable/pothole"
+        android:gravity="bottom|center"
+        android:text="Potholes"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button10"
+        android:layout_width="159dp"
+        android:layout_height="100dp"
+        android:layout_alignStart="@+id/txtTitle"
+        android:layout_alignTop="@+id/buttonRoad"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/Obstruction"
+        android:gravity="bottom|center"
+        android:text="Obstruction"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button13"
+        android:layout_width="106dp"
+        android:layout_height="106dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="331dp"
+        android:layout_marginEnd="141dp"
+        android:layout_marginRight="141dp"
+        android:background="@drawable/snowplow"
+        android:gravity="bottom|center"
+        android:text="Snow"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="86dp"
+        android:layout_height="106dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="137dp"
+        android:layout_marginLeft="137dp"
+        android:layout_marginTop="81dp"
+        android:background="@drawable/streetsign"
+        android:gravity="bottom|center"
+
+        android:text="Signs"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button12"
+        android:layout_width="133dp"
+        android:layout_height="109dp"
+        android:layout_alignStart="@+id/button10"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="-99dp"
+        android:layout_marginTop="208dp"
+        android:background="@drawable/Crosswalk"
+        android:gravity="bottom|center"
+        android:text="crosswalk"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="110dp"
+        android:layout_height="103dp"
+        android:layout_alignBottom="@+id/button12"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="0dp"
+        android:layout_toEndOf="@+id/txtTitle"
+        android:background="@drawable/bikelane"
+        android:gravity="bottom|center"
+        android:text="Bike Lane"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button14"
+        android:layout_width="73dp"
+        android:layout_height="93dp"
+        android:layout_alignEnd="@+id/buttonRoad"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="-223dp"
+        android:layout_marginBottom="76dp"
+        android:background="@drawable/other"
+        android:gravity="bottom|center"
+        android:text="Other"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="75dp"
+        android:layout_height="94dp"
+        android:layout_alignEnd="@+id/buttonCancel"
+        android:layout_alignBottom="@+id/button13"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="-2dp"
+        android:background="@drawable/StreetLight"
+        android:gravity="bottom|center"
+        android:text="Light"
+        android:textColor="@color/colorAccent"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="93dp"
+        android:layout_height="94dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="224dp"
+        android:background="@drawable/trafficlight"
+        android:gravity="bottom|center"
+        android:text="Signal"
+        android:textColor="@color/colorAccent"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
 
 </RelativeLayout>
