--- a/app/src/main/res/layout/fragment_road.xml
+++ b/app/src/main/res/layout/fragment_road.xml
@@ -60,7 +60,7 @@
         android:layout_alignTop="@+id/buttonRoad"
         android:layout_marginStart="110dp"
         android:layout_marginTop="2dp"
-        android:background="@drawable/Obstruction"
+        android:background="@drawable/obstruction"
         android:gravity="bottom|center"
         android:text="Obstruction"
         android:textColor="@color/colorAccent"
@@ -74,9 +74,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="331dp"
-        android:layout_marginEnd="141dp"
-        android:layout_marginRight="141dp"
+        android:layout_marginTop="333dp"
+        android:layout_marginEnd="140dp"
+        android:layout_marginRight="140dp"
         android:background="@drawable/snowplow"
         android:gravity="bottom|center"
         android:text="Snow"
@@ -110,7 +110,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="-99dp"
         android:layout_marginTop="208dp"
-        android:background="@drawable/Crosswalk"
+        android:background="@drawable/crosswalk"
         android:gravity="bottom|center"
         android:text="crosswalk"
         android:textColor="@color/colorAccent"
@@ -138,8 +138,8 @@
         android:layout_height="93dp"
         android:layout_alignEnd="@+id/buttonRoad"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="-223dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginEnd="-220dp"
+        android:layout_marginBottom="72dp"
         android:background="@drawable/other"
         android:gravity="bottom|center"
         android:text="Other"
@@ -155,7 +155,7 @@
         android:layout_alignBottom="@+id/button13"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="-2dp"
-        android:background="@drawable/StreetLight"
+        android:background="@drawable/streetlight"
         android:gravity="bottom|center"
         android:text="Light"
         android:textColor="@color/colorAccent"
@@ -164,12 +164,12 @@
 
     <Button
         android:id="@+id/button16"
-        android:layout_width="93dp"
-        android:layout_height="94dp"
+        android:layout_width="86dp"
+        android:layout_height="91dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="22dp"
-        android:layout_marginTop="224dp"
+        android:layout_marginTop="228dp"
         android:background="@drawable/trafficlight"
         android:gravity="bottom|center"
         android:text="Signal"
