--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,10 +7,18 @@
     android:background="@drawable/civixbackground"
     tools:context="com.getcivix.app.LoginPage">
 
+    <RelativeLayout
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        >
+
 
     <EditText
         android:id="@+id/editTextEMail"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="43dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="190dp"
@@ -22,7 +30,7 @@
 
     <EditText
         android:id="@+id/editTextPassword"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="43dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="250dp"
@@ -34,7 +42,7 @@
 
     <Button
         android:id="@+id/buttonLogin"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -47,7 +55,7 @@
 
     <Button
         android:id="@+id/buttonRegister"
-        android:layout_width="180dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -57,6 +65,7 @@
         android:text="@string/register"        android:textStyle="bold"
         />
 
+    </RelativeLayout>
 
 
 
