--- a/app/src/main/res/layout/activity_signup_page.xml
+++ b/app/src/main/res/layout/activity_signup_page.xml
@@ -1,180 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical"
-    android:padding="10dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/civixbackground"
-    tools:context=".SignupPage">
+    tools:context="com.getcivix.app.SignupPage">
+
+
 
     <RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="500dp"
-        android:layout_marginTop="70dp"
+        android:layout_width="250dp"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center">
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+     >
+
+
+        <EditText
+            android:id="@+id/editTextSelectInterest"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="210dp"
+            android:ems="10"
+            android:hint="My interests"
+            android:inputType="textPersonName"
+            android:background="@color/white"
+            />
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="vertical"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp" >
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/signup_input_layout_name"
-                android:layout_width="match_parent"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="120dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewAttachPicture"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp">
-                <EditText
-                    android:id="@+id/signup_username"
-                    android:layout_width="match_parent"
-                    android:layout_height="43dp"
-                    android:background="@color/white"
-                    android:ems="10"
-                    android:hint="@string/usernamehint"
-                    />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/signup_layout_email"
-                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:ems="10"
+                android:gravity="center_horizontal"
+                android:text="Attach your profile picture"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textAllCaps="false" />
+
+            <Button
+                android:id="@+id/buttonAttachPicture"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp">
-                <EditText
-                    android:id="@+id/signup_email"
-                    android:layout_width="match_parent"
-                    android:layout_height="43dp"
-                    android:background="@color/white"
-                    android:ems="10"
-                    android:inputType="textEmailAddress"
-                    android:hint="@string/emailhint" />
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/signup_layout_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp">
-                <EditText
-                    android:id="@+id/signup_input_password"
-                    android:layout_width="match_parent"
-                    android:layout_height="43dp"
-                    android:background="@color/white"
-                    android:ems="10"
-                    android:inputType="textPassword"
-                    android:hint="@string/createpasswordhint" />
-            </android.support.design.widget.TextInputLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/editTextEnterDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="43dp"
-                    android:layout_weight="1"
-                    android:ems="10"
-                    android:text="@string/interests"
-                    android:background="@color/white"
-                    android:textSize="20dp"
-                    />
-                <Spinner
-                    android:id="@+id/spinnerInterest"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.6"
-                    android:background="@android:drawable/btn_dropdown"
-                    android:spinnerMode="dropdown"/>
-
-            </LinearLayout>
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="20dp">
-                <TextView
-                    android:id="@+id/gender_textview"
-                    android:paddingRight="15dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/hint_gender"
-                    android:background="@color/white"
-                    android:textSize="20dp"
-                    />
-                <RadioGroup
-                    android:id="@+id/gender_radio_group"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/gender_textview"
-                    android:orientation="horizontal">
-                    <RadioButton
-                        android:id="@+id/male_radio_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:text="@string/male"
-                        android:checked="true"
-                        />
-                    <RadioButton
-                        android:id="@+id/female_radio_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white"
-                        android:text = "@string/female"
-                        />
-                </RadioGroup>
-            </RelativeLayout>
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-                <ImageView
-                    android:id="@+id/imgView"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"></ImageView>
-                <Button
-                    android:id="@+id/buttonLoadProfilePicture"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:text="Load Picture"
-                    android:layout_gravity="center"></Button>
-            </LinearLayout>
+                android:layout_weight="1"
+                android:background="@color/civixGreen"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:text="Upload" />
 
         </LinearLayout>
 
+
         <Button
-            android:id="@+id/buttonSignup"
-            android:layout_width="180dp"
+            android:id="@+id/buttonSignUp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="61dp"
             android:background="@color/civixGreen"
-            android:textColor="@color/beige"
-            android:text="@string/signup"
+            android:textColor="@color/white"
+            android:text="Register"
             android:textStyle="bold"
             />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView" />
+
+        <EditText
+            android:id="@+id/editTextRegisterUsername"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:hint="@string/usernamehint"
+            android:inputType="textPersonName"
+            android:background="@color/white"
+            />
+
+        <EditText
+            android:id="@+id/editTextRegisterEmail"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="60dp"
+            android:ems="10"
+            android:hint="@string/emailhint"
+            android:inputType="textPersonName"
+            android:background="@color/white"
+            />
+
+        <EditText
+            android:id="@+id/editTextCreatePassword"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="110dp"
+            android:ems="10"
+            android:hint="@string/passwordhint"
+            android:inputType="textPersonName"
+            android:background="@color/white"
+            />
+
+        <EditText
+            android:id="@+id/editTextSelectGender"
+            android:layout_width="match_parent"
+            android:layout_height="43dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="160dp"
+            android:ems="10"
+            android:hint="Select Gender"
+            android:inputType="textPersonName"
+            android:background="@color/white"
+            />
+
+
 
     </RelativeLayout>
-
-
 
 
 </RelativeLayout>
