--- a/app/src/main/res/layout/activity_map_page.xml
+++ b/app/src/main/res/layout/activity_map_page.xml
@@ -9,6 +9,7 @@
         android:id="@+id/mapfragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="50dp"
         android:text="THIS IS THE FRAGMENT CONTAINER">
     </FrameLayout>
 
