--- a/app/src/main/res/layout/fragment_report_screen.xml
+++ b/app/src/main/res/layout/fragment_report_screen.xml
@@ -54,7 +54,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/buttonTrash"
         android:layout_width="67dp"
         android:layout_height="82dp"
         android:layout_alignStart="@+id/txtTitle"
@@ -69,7 +69,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/buttonSidewalks"
         android:layout_width="121dp"
         android:layout_height="78dp"
         android:layout_alignParentTop="true"
@@ -86,7 +86,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/buttonParks"
         android:layout_width="76dp"
         android:layout_height="85dp"
         android:layout_alignParentStart="true"
@@ -104,10 +104,10 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/buttonWater"
         android:layout_width="70dp"
         android:layout_height="87dp"
-        android:layout_alignStart="@+id/button10"
+        android:layout_alignStart="@+id/buttonTrash"
         android:layout_alignParentTop="true"
         android:layout_marginStart="1dp"
         android:layout_marginTop="218dp"
@@ -119,10 +119,10 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonProperty"
         android:layout_width="102dp"
         android:layout_height="87dp"
-        android:layout_alignBottom="@+id/button12"
+        android:layout_alignBottom="@+id/buttonWater"
         android:layout_marginStart="-21dp"
         android:layout_marginBottom="-1dp"
         android:layout_toEndOf="@+id/txtTitle"
@@ -134,7 +134,7 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/button14"
+        android:id="@+id/buttonOther"
         android:layout_width="73dp"
         android:layout_height="81dp"
         android:layout_alignEnd="@+id/buttonRoad"
