--- a/app/src/main/res/layout/fragment_snow_report.xml
+++ b/app/src/main/res/layout/fragment_snow_report.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignalReport">
-
+    tools:context=".SnowReport">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -37,19 +36,19 @@
                     android:layout_width="86dp"
                     android:layout_height="91dp"
                     android:gravity="center"
-                    android:text="Signal"
+                    android:text="Snow"
                     android:layout_weight="1"
                     android:textColor="@color/colorAccent"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/imageSignal"
-                android:layout_width="86dp"
-                android:layout_height="91dp"
-                android:background="@drawable/trafficlight"
+                <ImageView
+                    android:id="@+id/imageSignal"
+                    android:layout_width="86dp"
+                    android:layout_height="91dp"
+                    android:background="@drawable/snowplow"
 
-                />
+                    />
 
 
 
