--- a/app/src/main/res/layout/fragment_road_category.xml
+++ b/app/src/main/res/layout/fragment_road_category.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RoadCategory">
+    android:layout_alignParentRight="false"
+    android:layout_centerHorizontal="true"
+    tools:context=".RoadCategory"
+    android:background="@color/fragmentcolor">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        style="@style/RootLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/txtTitle"
@@ -43,147 +41,162 @@
         android:textStyle="bold"
         android:typeface="sans" />
 
-    <Button
-        android:id="@+id/buttonPotholes"
-        android:layout_width="115dp"
-        android:layout_height="102dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="85dp"
-        android:layout_marginEnd="-13dp"
-        android:layout_toStartOf="@+id/txtTitle"
-        android:background="@drawable/pothole"
-        android:gravity="bottom|center"
-        android:text="Potholes"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/buttonConstruction"
-        android:layout_width="159dp"
-        android:layout_height="100dp"
-        android:layout_alignStart="@+id/txtTitle"
-        android:layout_alignTop="@+id/buttonPotholes"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/obstruction"
-        android:gravity="bottom|center"
-        android:text="Obstruction"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/buttonSnow"
-        android:layout_width="106dp"
-        android:layout_height="106dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="333dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginRight="140dp"
-        android:background="@drawable/snowplow"
-        android:gravity="bottom|center"
-        android:text="Snow"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/buttonSigns"
-        android:layout_width="86dp"
-        android:layout_height="106dp"
+    <android.support.v7.widget.GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="327dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="137dp"
-        android:layout_marginLeft="137dp"
-        android:layout_marginTop="81dp"
-        android:background="@drawable/streetsign"
-        android:gravity="bottom|center"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="false"
+        android:layout_centerInParent="false"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="3dp">
 
-        android:text="Signs"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/buttonPotholes"
+            android:layout_width="115dp"
+            android:layout_height="102dp"
+            android:background="@drawable/pothole"
+            android:foregroundGravity="bottom|center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Potholes"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_gravity="bottom|center"
+            app:layout_row="0" />
 
-    <Button
-        android:id="@+id/buttonCrosswalk"
-        android:layout_width="133dp"
-        android:layout_height="109dp"
-        android:layout_alignStart="@+id/buttonConstruction"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="-99dp"
-        android:layout_marginTop="208dp"
-        android:background="@drawable/crosswalk"
-        android:gravity="bottom|center"
-        android:text="crosswalk"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/buttonConstruction"
+            android:layout_width="149dp"
+            android:layout_height="94dp"
+            android:background="@drawable/obstruction"
+            android:foregroundGravity="bottom|center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Obstruction"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_column="2"
+            app:layout_gravity="bottom|center"
+            app:layout_row="1" />
 
-    <Button
-        android:id="@+id/buttonBikeLane"
-        android:layout_width="110dp"
-        android:layout_height="103dp"
-        android:layout_alignBottom="@+id/buttonCrosswalk"
-        android:layout_marginStart="1dp"
-        android:layout_marginBottom="0dp"
-        android:layout_toEndOf="@+id/txtTitle"
-        android:background="@drawable/bikelane"
-        android:gravity="bottom|center"
-        android:text="Bike Lane"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/buttonSnow"
+            android:layout_width="107dp"
+            android:layout_height="101dp"
+            android:background="@drawable/snowplow"
+            android:foregroundGravity="center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Snow"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_gravity="center"
+            app:layout_row="2" />
 
-    <Button
-        android:id="@+id/buttonRoadOther"
-        android:layout_width="73dp"
-        android:layout_height="93dp"
-        android:layout_alignEnd="@+id/buttonRoad"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="-220dp"
-        android:layout_marginBottom="72dp"
-        android:background="@drawable/other"
-        android:gravity="bottom|center"
-        android:text="Other"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/buttonSigns"
+            android:layout_width="85dp"
+            android:layout_height="97dp"
+            android:background="@drawable/streetsign"
+            android:foregroundGravity="bottom|center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Signs"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_column="1"
+            app:layout_gravity="bottom|center"
+            app:layout_row="0" />
 
-    <Button
-        android:id="@+id/buttonLight"
-        android:layout_width="75dp"
-        android:layout_height="94dp"
-        android:layout_alignEnd="@+id/buttonCancel"
-        android:layout_alignBottom="@+id/buttonSnow"
-        android:layout_marginEnd="120dp"
-        android:layout_marginBottom="-2dp"
-        android:background="@drawable/streetlight"
-        android:gravity="bottom|center"
-        android:text="Light"
-        android:textColor="@color/colorAccent"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/buttonCrosswalk"
+            android:layout_width="130dp"
+            android:layout_height="94dp"
+            android:background="@drawable/crosswalk"
+            android:foregroundGravity="bottom|center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="crosswalk"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_column="2"
+            app:layout_gravity="bottom|center"
+            app:layout_row="0" />
 
-    <Button
-        android:id="@+id/buttonSignal"
-        android:layout_width="86dp"
-        android:layout_height="91dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="22dp"
-        android:layout_marginTop="228dp"
-        android:background="@drawable/trafficlight"
-        android:gravity="bottom|center"
-        android:text="Signal"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        <Button
+            android:id="@+id/buttonBikeLane"
+            android:layout_width="124dp"
+            android:layout_height="108dp"
+            android:background="@drawable/bikelane"
+            android:foregroundGravity="bottom|center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Bike Lane"
+            android:textColor="@color/colorAccent"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            app:layout_column="0"
+            app:layout_gravity="bottom|center"
+            app:layout_row="1" />
 
-    </RelativeLayout>
+        <Button
+            android:id="@+id/buttonRoadOther"
+            android:layout_width="81dp"
+            android:layout_height="104dp"
+            android:background="@drawable/other"
+            android:foregroundGravity="center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Other"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="2"
+            app:layout_gravity="center_horizontal|center"
+            app:layout_row="2" />
 
+        <Button
+            android:id="@+id/buttonLight"
+            android:layout_width="75dp"
+            android:layout_height="94dp"
+            android:background="@drawable/streetlight"
+            android:foregroundGravity="center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Light"
+            android:textColor="@color/colorAccent"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            app:layout_column="1"
+            app:layout_gravity="center"
+            app:layout_row="2" />
 
-</FrameLayout>
+        <Button
+            android:id="@+id/buttonSignal"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/trafficlight"
+            android:foregroundGravity="bottom|center"
+            android:gravity="bottom|center"
+            android:padding="3dp"
+            android:text="Signal"
+            android:textColor="@color/colorAccent"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_column="1"
+            app:layout_gravity="bottom|center"
+            app:layout_row="1" />
+
+    </android.support.v7.widget.GridLayout>
+
+</RelativeLayout>
